# animated-bmp-cmake

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMyWindow.cpp  CMyWindow.h  MfcProject002.sln  MfcProject002.vcxproj  MfcProject002.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp
